ipc/ipdl/test/ipdl/ok/Struct.ipdl
struct S {
    int i;
    double d;
};

sync protocol Struct {
parent:
    sync test(S s) returns (S ss);
    async __delete__();
};
