ipc/ipdl/test/ipdl/error/structUnknownField.ipdl
//error: field `i' of struct `S' has unknown type `Foobers'

struct S {
    Foobers i;
};

protocol structUnknownField {
child: async __delete__(S s);
};
